enable decoding of relative urls, change supported java type to URI